fixed info section top spacing and reworked about section

--- a/components/MainContent/AboutUs.module.scss
+++ b/components/MainContent/AboutUs.module.scss
@@ -6,17 +6,18 @@
 .about {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   margin: auto;
   width: 100%;
   background-color: #90c1e1;
 
   justify-content: center;
-  z-index: 1;
 }
 .container {
   //background-color: red;
   max-width: 90rem;
   width: 100%;
+  z-index: 1;
 }
 
 .rowItems {
@@ -37,13 +38,19 @@
 }
 .containerBox {
   height: 100%;
+  display: flex;
+  //flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 
   //-webkit-box-shadow: -1px 2px 9px 0px rgba(62, 66, 66, 0.08);
   padding: 20px 0px;
-  border: 1px solid hsl(210, 40%, 91%);
+  //border: 1px solid hsl(210, 40%, 91%);
   border-radius: 4px;
-  transition: all 0.6s ease 0s;
-  cursor: pointer;
+  transition: all 0.4s ease 0s;
+  background-color: var(--color-2);
+  //cursor: pointer;
 
   .containerImage {
     color: var(--color-7);
@@ -54,17 +61,24 @@
     border-radius: 4px;
     margin-bottom: 1rem;
     background-color: hsl(210, 40%, 96%);
-    cursor: pointer;
+    //cursor: pointer;
   }
   h4 {
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 0.5rem;
+    color: var(--color-8);
+    transition: 0.4s;
+  }
+  .type {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 .containerBox:hover {
   box-shadow: 5px 30px 56px rgb(55 55 55 / 22%);
-  border: 1px solid transparent;
+  //border: 1px solid transparent;
   transform: translate(-3px);
-  background-color: var(--color-2);
+  background-color: hsl(204, 90%, 88%);
 }
