--- a/components/MainContent/Info.module.scss
+++ b/components/MainContent/Info.module.scss
@@ -1,5 +1,6 @@
 .info {
-  padding-top: 6rem;
+  //padding-top: 6rem;
+
   position: relative;
   display: flex;
 
@@ -10,6 +11,7 @@
 }
 
 .container {
+  margin-top: 4rem;
   max-width: 90rem;
   width: 100%;
   width: 100%;
